create page detailCategory, category, detail Product, Product, Cart. With responsive maybe

--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -14,3 +14,12 @@
 	height: 278px;
 	border-radius: 8px;
 }
+
+.imgListCart {
+    width: 95px;
+    height: 69px;
+}
+
+.shoppingCart {
+    height: 15%;
+}
